--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -11,11 +11,17 @@
     </fragment>
     <fragment android:id="@+id/chambersFragment"
               android:name="com.example.andri.medicalfridge.ui.fragments.ChambersFragment"
-              android:label="fragment_chambers" tools:layout="@layout/fragment_chambers"/>
+              android:label="fragment_chambers" tools:layout="@layout/fragment_chambers">
+        <action android:id="@+id/action_chambersFragment_to_medicationsFragment"
+                app:destination="@id/medicationsFragment"/>
+    </fragment>
     <fragment android:id="@+id/statisticFragment"
               android:name="com.example.andri.medicalfridge.ui.fragments.StatisticFragment"
               android:label="fragment_statistic" tools:layout="@layout/fragment_statistic"/>
     <fragment android:id="@+id/personalFragment"
               android:name="com.example.andri.medicalfridge.ui.fragments.PersonalFragment"
               android:label="fragment_personal" tools:layout="@layout/fragment_personal"/>
+    <fragment android:id="@+id/medicationsFragment"
+              android:name="com.example.andri.medicalfridge.ui.fragments.MedicationsFragment"
+              android:label="fragment_medications" tools:layout="@layout/fragment_medications"/>
 </navigation>
